# embedded-gateway

./: CMakeLists.txt  Makefile  README.md
.cursor/rules/: intro.mdc
docs/: json_protocol.md  usage_guide.md  线程结构图.md  项目结构图.md
examples/: client_example.cpp  npu_node_example.cpp
infer/: engine_ipc_server.cpp  engine_ipc_server.h  engine_main.cpp  infer_engine_api.h  infer_ipc_client.cpp  infer_ipc_client.h  infer_main.cpp  infer_net_client.cpp  infer_net_client.h  infer_utils.h
src/: core.rar  main.cpp
src/common/: data_structures.h
src/core/: client_manager.cpp  client_manager.h  gateway_server.cpp  gateway_server.h  json_utils.cpp  json_utils.h  message_handler.cpp  message_handler.h  npu_node_manager.cpp  npu_node_manager.h  task_cache.cpp  task_cache.h  task_context.cpp  task_context.h  task_manager.cpp  task_manager.h  task_queue.cpp  task_queue.h
src/utils/: logger.cpp  logger.h
